tests/fixtures/effect-compiler/errors/EFX2300.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {
    return texture(non_exist, uv);
  }
}%
